# routes/userRouter.js
@@ -5,5 +5,6 @@ const userAuth = require('../helper/auth.js');
 router.post('/create', userRouter.create);
 router.post('/login', userRouter.login);
 router.get('/show', userAuth, userRouter.show);
+router.get('/showall', userRouter.showAll);
 
 module.exports = router;
